# SEO-Optimize

./: .gitignore  SEOArch.md
seooptimize/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  start.cmd  start.ps1
seooptimize/.streamlit/: config.toml
seooptimize/app/: cli.py  main.py
seooptimize/app/ai/: claude.py  deepseek.py  gemini.py  prompts.py
seooptimize/app/analysis/: competitor.py  consensus.py
seooptimize/app/cache/: __init__.py  store.py
seooptimize/app/canvas/: renderer.py
seooptimize/app/config/: settings.py  theme.py
seooptimize/app/core/: __init__.py  logging.py
seooptimize/app/crawler/: discovery.py  robots.py
seooptimize/app/exports/: docx.py  html_export.py  pdf.py  report_data.py
seooptimize/app/extractors/: dom.py  local_seo.py  scorer.py
seooptimize/app/models/: __init__.py  annotations.py  page.py  project.py  recommendations.py
seooptimize/app/rendering/: playwright_engine.py
seooptimize/app/services/: analysis_service.py
seooptimize/app/ui/: app_state.py
seooptimize/app/ui/components/: ai_insights.py  consolidated_report.py  rec_card.py  score_display.py  sidebar.py
seooptimize/app/utils/: __init__.py  fix_classifier.py  friendly_text.py  hash.py  url.py
seooptimize/scripts/: smoke_deepseek.py  test_bbox.py
seooptimize/tests/: test_app_state.py  test_competitor_rendering.py  test_consensus.py  test_deepseek_integration.py  test_extractor.py  test_friendly_text.py  test_hash.py  test_local_seo.py  test_report_data.py  test_score_display.py  test_summary_streamlit_state.py  test_url_utils.py
(+6 files in other folders)
