[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seooptimize"
version = "1.0.0"
description = "Commercial-quality local SEO analysis tool for service businesses"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }

[project.scripts]
start = "app.cli:start"
seooptimize = "app.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
